--- a/_config.yml
+++ b/_config.yml
@@ -49,11 +49,12 @@ kramdown:
 
 # Disqus settings
 #disqus_username: _your_disqus_short_name_
+disqus_username: vincent_mi
 
 # Duoshuo settings
-duoshuo_username: vnzmi
+#duoshuo_username: vnzmi
 # Share component is depend on Comment so we can NOT use share only.
-duoshuo_share: true                     # set to false if you want to use Comment without Sharing
+#duoshuo_share: true                     # set to false if you want to use Comment without Sharing
 
 
 
