--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ kramdown:
 
 # Disqus settings
 #disqus_username: _your_disqus_short_name_
-disqus_username: vincent_mi
+disqus_username: vnzmi
 
 # Duoshuo settings
 #duoshuo_username: vnzmi
