--- a/_config.yml
+++ b/_config.yml
@@ -5,36 +5,53 @@ header-img: img/bg-sunset.jpg
 email: miwenshu@gmail.com
 description: "关于生活和code | Vincent Mi"
 keyword: "PHP,Java,框架,Linux,Arduino"
-url: "http://vnzmi.com"              # your host, for absolute URL
-baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
-
-
+url: "http://vnzmi.com" # your host, for absolute URL
+baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
 # SNS settings
-RSS: false
-weibo_username:     miwenshu
-zhihu_username:     vincentz
-github_username:    vincentmi
-twitter_username:  miwenshu
-facebook_username:  miwenshu
+RSS: true
+weibo_username: miwenshu
+zhihu_username: vincentz
+github_username: vincentmi
+twitter_username: miwenshu
+facebook_username: miwenshu
 # linkedin_username:  firstname-lastname-idxxxx
-
-
 
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 highlighter: rouge
 permalink: pretty
 paginate: 10
-exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md","Gemfile","Gemfile.lock","node_modules","vendor/bundle/","vendor/cache/","vendor/gems/","vendor/ruby/"]
-anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
-
-
+exclude:
+  [
+    "less",
+    "node_modules",
+    "Gruntfile.js",
+    "package.json",
+    "README.md",
+    "README.zh.md",
+    "Gemfile",
+    "Gemfile.lock",
+    "node_modules",
+    "vendor/bundle/",
+    "vendor/cache/",
+    "vendor/gems/",
+    "vendor/ruby/",
+    "_tools",
+    "publish.sh",
+    "run.sh",
+    "serv.sh",
+    "update_index.sh",
+    "publish_index.sh",
+    "publish.sh",
+    "build.sh",
+    "Dockerfile",
+  ]
+anchorjs: true # if you want to customize anchor. check out line:181 of `post.html`
 
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
-plugins: [jekyll-paginate ] #, jekyll-algolia]
-
+plugins: [jekyll-paginate] #, jekyll-algolia]
 
 algolia:
   application_id: 52B8KATAQT
@@ -47,9 +64,7 @@ algolia:
 # document: http://jekyllrb.com/docs/configuration/#kramdown
 markdown: kramdown
 kramdown:
-  input: GFM                            # use Github Flavored Markdown !important
-
-
+  input: GFM # use Github Flavored Markdown !important
 
 # Disqus settings
 #disqus_username: _your_disqus_short_name_
@@ -60,53 +75,36 @@ disqus_username: vnzmi
 # Share component is depend on Comment so we can NOT use share only.
 #duoshuo_share: true                     # set to false if you want to use Comment without Sharing
 
-
-
-
 # Analytics settings
 # Baidu Analytics
 ba_track_id: 2b745fdb2d90955bdfb8ad1194277073
 # Google Analytics
-ga_track_id: 'UA-78738242-1'            # Format: UA-xxxxxx-xx
+ga_track_id: "UA-78738242-1" # Format: UA-xxxxxx-xx
 ga_domain: vnzmi.com
 
-
-
 # Sidebar settings
-sidebar: true                           # whether or not using Sidebar.
+sidebar: true # whether or not using Sidebar.
 sidebar-about-description: "In Code We Trust"
-sidebar-avatar: /img/avatar.png      # use absolute URL, seeing it's used in both `/` and `/about/`
-
-
+sidebar-avatar: /img/avatar.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
-featured-tags: true                     # whether or not using Feature-Tags
-featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
-
-
+featured-tags: true # whether or not using Feature-Tags
+featured-condition-size: 1 # A tag will be featured if the size of it is more than this condition value
 
 # Friends
-friends: [
-  {
-    title: "青鸟翅膀",
-    href: "http://blog.sina.com.cn/vegas"
-  },
+friends:
+  [
+    { title: "青鸟翅膀", href: "http://blog.sina.com.cn/vegas" },
 
-  {
-    title: "Caffeine Park",
-    href: "http://blog.sina.com.cn/yoshikilau"
-  },
+    { title: "Caffeine Park", href: "http://blog.sina.com.cn/yoshikilau" },
 
-  {
-        title: "中国省市区数据库",
-        href: "https://github.com/vincentmi/vnzmi/tree/gh-pages/attach/region.sql"
-    },
-   {
-        title: "spring-security-reference",
-        href: "https://www.gitbook.com/book/vincentmi/spring-security-reference-zh/details"
+    {
+      title: "中国省市区数据库",
+      href: "https://github.com/vincentmi/vnzmi/tree/gh-pages/attach/region.sql",
     },
     {
-        title: "Theme From Hux",
-        href: "http://huxpro.github.io"
-    }
-]
+      title: "spring-security-reference",
+      href: "https://www.gitbook.com/book/vincentmi/spring-security-reference-zh/details",
+    },
+    { title: "Theme From Hux", href: "http://huxpro.github.io" },
+  ]
