--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 我的乐与怒
 SEOTitle: 我的乐与怒 | Vincent Mi
-header-img: img/homebg1.jpg
+header-img: img/home-bg1.jpg
 email: miwenshu@gmail.com
 description: "关于生活和code | Vincent Mi"
 keyword: "PHP,Java,框架,Linux,Arduino"
