--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: 我的乐与怒
 SEOTitle: 我的乐与怒 | Vincent Mi
 header-img: img/erhai18622_0_1.jpg
+#img/erhai18622_0_1.jpg
 email: miwenshu@gmail.com
 description: "关于生活和code | Vincent Mi"
 keyword: "PHP,Java,框架,Linux,Arduino"
