--- a/hugo.toml
+++ b/hugo.toml
@@ -2,7 +2,7 @@ baseURL = '/'
 languageCode = 'zh-cn'
 theme = 'cleanwhite'
 title = '我的乐与怒'
-header_image = 'img/tianfu_3_st.jpg'
+header_image = 'img/car.jpg'
 googleAnalytics = "UA-78738242-1"
 baiduTrackId  = "2b745fdb2d90955bdfb8ad1194277073"
 hasCJKLanguage = true
@@ -16,7 +16,7 @@ home = ["HTML", "RSS"]
   googleAnalytics = "UA-78738242-1"
   baiduTrackId  = "2b745fdb2d90955bdfb8ad1194277073"
   icp = "蜀ICP备17040089号-2"
-  header_image = "img/tianfu_3_st.jpg"
+  header_image = "img/car2.jpg"
   SEOTitle = "我的乐与怒 | Vincent's Blog"
   description = "In code we trust"
   keyword = "我的乐与怒,vincent mi, miwenshu, 电商,  博客, 个人网站, 互联网, Web, 云原生, PaaS, Java, Kubernetes, 微服务, Microservice"
